--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -4,7 +4,7 @@ MAINTAINER site24x7plus<site24x7plus@zohocorp.com>
 
 WORKDIR /opt
 
-RUN apk add -qU --no-cache coreutils wget python-dev tar openssh-server
+RUN apk add -qU --no-cache coreutils wget python-dev tar openssh-server supervisor
 
 COPY ["s247_setup.sh", "entrypoint.sh", "heartbeat.sh", "requirements.txt", "singleinstance.py", "./"]
 
