--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -4,7 +4,7 @@ MAINTAINER site24x7plus<site24x7plus@zohocorp.com>
 
 WORKDIR /opt
 
-RUN apk add -qU --no-cache coreutils wget python-dev tar openssh-server supervisor
+RUN apk add -qU --no-cache coreutils wget python-dev openssh-server bash gcc musl-dev linux-headers libffi-dev
 
 COPY ["s247_setup.sh", "entrypoint.sh", "heartbeat.sh", "requirements.txt", "singleinstance.py", "./"]
 
@@ -12,7 +12,7 @@ RUN chmod +x entrypoint.sh && chmod +x heartbeat.sh && chmod +x s247_setup.sh
 
 RUN ./s247_setup.sh
 
-RUN wget https://staticdownloads.site24x7.com/server/Site24x7MonitoringAgent.install
+RUN wget https://staticdownloads.site24x7.com/server/Site24x7MonitoringAgent.install --no-check-certificate
 
 HEALTHCHECK --interval=10s --timeout=3s --retries=1 \
   CMD ./heartbeat.sh
