--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -3,14 +3,16 @@ FROM alpine:3.6
 MAINTAINER site24x7plus<site24x7plus@zohocorp.com>
 
 WORKDIR /opt
-
-RUN apk add -qU --no-cache coreutils wget python-dev openssh-server bash gcc musl-dev linux-headers libffi-dev
+ENV http_proxy=http://192.168.100.100:3128 https_proxy=http://192.168.100.100:3128
+RUN apk add -qU --no-cache coreutils openssl-dev make wget python-dev openssh-server bash gcc musl-dev linux-headers libffi-dev supervisor
 
 COPY ["s247_setup.sh", "entrypoint.sh", "heartbeat.sh", "requirements.txt", "singleinstance.py", "./"]
 
 RUN chmod +x entrypoint.sh && chmod +x heartbeat.sh && chmod +x s247_setup.sh
 
 RUN ./s247_setup.sh
+
+ENV http_proxy="" https_proxy=""
 
 RUN wget https://staticdownloads.site24x7.com/server/Site24x7MonitoringAgent.install --no-check-certificate
 
@@ -19,4 +21,4 @@ HEALTHCHECK --interval=10s --timeout=3s --retries=1 \
 
 ENTRYPOINT ["/opt/entrypoint.sh"]
 
-CMD ["supervisord", "-n", "-c", "/etc/supervisor/supervisord.conf"]
+CMD ["supervisord", "-n", "-c", "/etc/supervisord.conf"]
