--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -4,7 +4,7 @@ MAINTAINER site24x7plus<site24x7plus@zohocorp.com>
 
 WORKDIR /opt
 ENV http_proxy=http://192.168.100.100:3128 https_proxy=http://192.168.100.100:3128
-RUN apk add -qU --no-cache coreutils openssl-dev make wget python-dev openssh-server bash gcc musl-dev linux-headers libffi-dev supervisor
+RUN apk add -qU --no-cache coreutils openssl libffi-dev openssl-dev make wget python-dev openssh-server bash gcc musl-dev linux-headers supervisor ca-certificates
 
 COPY ["s247_setup.sh", "entrypoint.sh", "heartbeat.sh", "requirements.txt", "singleinstance.py", "./"]
 
@@ -14,7 +14,7 @@ RUN ./s247_setup.sh
 
 ENV http_proxy="" https_proxy=""
 
-RUN wget https://staticdownloads.site24x7.com/server/Site24x7MonitoringAgent.install --no-check-certificate
+RUN wget https://staticdownloads.site24x7.com/server/Site24x7MonitoringAgent.install
 
 HEALTHCHECK --interval=10s --timeout=3s --retries=1 \
   CMD ./heartbeat.sh
