--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,17 @@ futures
 xmljson
 psutil
 pymysql
+urllib3==1.26.19
 docker
 prometheus_client
 chardet
 dateparser
 func_timeout
 distro
-pycrypto
+pycryptodome
 pkcs7
+ifcfg
+xmltodict
+pyasyncore
+pyyaml
+requests
