--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,17 @@ futures
 xmljson
 psutil
 pymysql
+urllib3==1.26.19
 docker
 prometheus_client
 chardet
 dateparser
 func_timeout
 distro
-pycrypto
+pycryptodome
 pkcs7
-PyYAML
+ifcfg
+xmltodict
+pyasyncore
+pyyaml
+requests
